# Book_Store_BackEnd

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/worflows/: build.yml
.github/workflows/: build.yml  python-anywhere-deploy.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: home.html
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py  models.py  views.py  viewsets.py
product/migrations/: 0001_initial.py
product/models/: __init__.py
product/tests/: factories.py  test_models.py  test_product.py  test_views.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
